--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -32,26 +32,34 @@ http {
 
   # include /etc/nginx/conf.d/*.conf;
 
+  upstream app {
+    server web:5000;
+  }
 
   server {
     listen 80;
     return 301 https://$host$request_uri;
   }
+
   server {
     listen 443 ssl;
     ssl_certificate     /etc/nginx/ssl/server.crt; #SSL証明書
     ssl_certificate_key /etc/nginx/ssl/server.key; #秘密鍵
-    access_log /var/log/nginx/upstream.log upstreamlog;
+    access_log /var/log/nginx/access.log upstreamlog;
 
+    root /app;
     server_name localhost;
+
     location / {
-      proxy_pass          http://web:5000;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $http_host;
-      proxy_set_header X-NginX-Proxy true;
-      proxy_redirect off;
+        try_files $uri @flask;
+    }
+
+    location @flask {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_redirect off;
+
+        proxy_pass http://app;
     }
   }
 }
