--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -8,5 +8,10 @@ WORKDIR $app_dir
 
 RUN pip install --upgrade pip
 
+COPY flask/requirements.txt .
+
 # 利用するパッケージがかたまるまでコメントアウト
-# RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt
+
+# WSGI HTTP Server ひとまずまGunicornで
+CMD ["gunicorn", "main:app", "--config /etc/guni/guniconf.py", "-b", "0.0.0.0:5000"]
