--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./docker/nginx/ssl:/etc/nginx/ssl
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     environment:
-      - "TZ=Japan"
+      TZ: Japan
     restart: always
     ports:
       - 80:80
@@ -25,9 +25,12 @@ services:
     volumes:
       - ./flask:/app
       - ./docker/web/guniconf.py:/etc/guni/guniconf.py  # いったん/etc以下にする
-      - ./docker/web/log:/var/log/guni
+      - ./docker/web/log:/var/log/app
     # ports:
     #   - 5000:5000 # 内部だけでいいのでホストOSには出さない
+    environment:
+      TZ: Japan
+      FLASK_ENV: development
     links:
       - db
     tty: true
